tests/checker/fail/union_variants_out_of_order.can
Apple = String

Banana = String

Cherry = String

Fruit = Cherry
  + Banana
  + Apple

Unit => Program {
    "ok".print()
}
